# i0rTech

./: CMakeLists.txt  LICENCES.md  README.md
Blender/io_scene_i0r/: __init__.py  export_i0r.py
Blender/io_sgo_i0r/: __init__.py  export_i0r.py
Blender/ui_i0r/: __init__.py
Common/: CMakeLists.txt
Common/i0rCore/: Application.hpp  Colors.hpp  Common.hpp  Configuration.hpp  Dialogs.hpp  FSmallGeometry.hpp  FTexture.hpp  Flags.hpp  IConsole.hpp  IEngine.hpp  IFileSystem.hpp  IInputHandler.hpp  IMemoryManager.hpp  ITaskManager.hpp  Instances.cpp  Instances.hpp  Keys.hpp  Library.hpp  Macros.hpp  MemoryAlignement.hpp  MemoryPage.hpp  Module.hpp  Mouse.hpp  Task.hpp  Time.hpp  Types.hpp
Common/i0rCore/Allocators/: Pool.hpp  Stack.hpp
Common/i0rCore/Hashing/: Base64.hpp  Crc32.hpp
Common/i0rCore/Helpers/: Class.hpp  File.hpp  String.hpp
Common/i0rCore/PlateformSpecifics/: Windows.hpp
Common/i0rDebug/: Assert.hpp  CrashTools.hpp  IDevMenu.hpp  IFileWatchdog.hpp  IMemoryTracker.hpp
Common/i0rGame/: Actor.hpp  IGameLogic.hpp  ISceneManager.hpp
Common/i0rMaths/: Common.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Common/i0rRender/: AABB.hpp  Camera.hpp  Decal.hpp  Font.hpp  Frustum.hpp  GenericAttributes.hpp  IFrameBuffer.hpp  IGraphicsApiContext.hpp  IIndiceBuffer.hpp  IRenderWindow.hpp  IRenderer.hpp  IShader.hpp  IShaderManager.hpp  ITexture.hpp  ITextureManager.hpp  IVertexBuffer.hpp  Lod.hpp  Material.hpp  Mesh.hpp  TextureCommon.hpp  TextureConstants.hpp  UniformBuffers.hpp
Common/i0rRender/Lighting/: PointLight.hpp
Common/i0rRender/Renderables/: Generic.hpp  TextString.hpp  UITexture.hpp
Core/: CMakeLists.txt  Common.hpp  Engine.cpp  Engine.hpp
Core/i0rConsole/: Console.cpp  Console.hpp
Core/i0rFileSystem/: FBinary.hpp  FStaticScene.hpp  FTexture.hpp  FileSystem.cpp  FileSystem.hpp  FileWatchdog.cpp  FileWatchdog.hpp
Core/i0rFileSystem/zlib/: zconf.h  zlib.h
Core/i0rGame/: Actor.cpp  Spawn.hpp
Core/i0rInputHandler/: InputHandler.cpp  InputHandler.hpp
Core/i0rMemoryManager/: MemoryManager.cpp  MemoryManager.hpp
Core/i0rSceneManager/: SceneManager.cpp  SceneManager.hpp  SceneNode.hpp
Core/i0rSystem/: Configuration.cpp  Configuration.hpp  Environment.cpp  Environment.hpp
Core/i0rTaskManager/: TaskManager.cpp  TaskManager.hpp  Worker.cpp  Worker.hpp
OpenGL/: Addresses.cpp  Addresses.hpp  CMakeLists.txt  Common.hpp  Context.cpp  Context.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndiceBuffer.cpp  IndiceBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
OpenGL/Helpers/: Attribute.hpp
OpenGL/i0rDebugRender/: Helpers.hpp
OpenGL/i0rShaderManager/: Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  UberShader.hpp
OpenGL/i0rTextureManager/: Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
Render/: CMakeLists.txt  Common.hpp  EnvironmentProbe.cpp  EnvironmentProbe.hpp  Font.hpp  Lod.cpp  RenderWindow.cpp  RenderWindow.hpp  Renderer.cpp  Renderer.hpp  ShadowCascade.cpp  ShadowCascade.hpp  SmallGeometry.hpp  UniformBuffers.cpp
Render/i0rDebugRender/: AABBWireframe.cpp  AABBWireframe.hpp  DebugMenu.hpp  DevMenu.cpp  DevMenu.hpp  FramerateCounter.cpp  FramerateCounter.hpp
Render/i0rPrimitives/: PrimitiveBox.cpp  PrimitiveBox.hpp  PrimitiveEditorGrid.cpp  PrimitiveEditorGrid.hpp  PrimitiveQuad.cpp  PrimitiveQuad.hpp  PrimitiveScreenQuad.cpp  PrimitiveScreenQuad.hpp
Render/i0rPrograms/: ArHosekSkyModelData_RGB.h  Composition.cpp  Composition.hpp  DeferredDecal.cpp  DeferredDecal.hpp  DeferredTiled.cpp  DeferredTiled.hpp  EnvironmentProbeRendering.cpp  EnvironmentProbeRendering.hpp  InterfaceTexture.cpp  InterfaceTexture.hpp  Shadow.cpp  Shadow.hpp  Skydome.cpp  Skydome.hpp  Text.cpp  Text.hpp
SampleProject/: CMakeLists.txt  EntryPoint.cpp  GameLogic.cpp  GameLogic.hpp  SampleProject.manifest
